[package]
name = "git-remote-cyfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cyfs lib
cyfs-util= "*"
cyfs-base = "*"
cyfs-core = "*"
cyfs-lib = "*"
cyfs-debug = "*"

# others
directories="*"
async-std = {version="*", features = ["unstable", "attributes"]}
cyfs-git-base =  { path = "../cyfs-git-base" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile="*"
log = "=0.4"
dirs = "4.0.0"