[package]
name = "code-dao-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cyfs lib
cyfs-util= "*"
cyfs-base = "*"
cyfs-core = "*"
cyfs-lib = "*"
cyfs-debug = "*"

# others
cyfs-git-base =  { path = "../cyfs-git-base" }
async-std = {version="*", features = ["unstable", "attributes"]}
prost="*"
log = { version = "=0.4.16", features = ["max_level_trace", "release_max_level_trace"] }
async-trait = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokei="*"